# hypercore-agents

./: .gitattributes  .gitignore  Cargo.toml  README.md  memory.db
crates/hypercore/: BUILD_INSTRUCTIONS.md  Cargo.toml  script.py
crates/hypercore-examples-groq/: Cargo.toml
crates/hypercore-examples-groq/src/: main.rs
crates/hypercore-examples-openai/: Cargo.toml
crates/hypercore-examples-openai/src/: main.rs
crates/hypercore-groq/: Cargo.toml
crates/hypercore-groq/src/: lib.rs  main.rs
crates/hypercore-hybrid/: Cargo.toml
crates/hypercore-hybrid/src/: lib.rs
crates/hypercore-memory-sqlite/: Cargo.toml
crates/hypercore-memory-sqlite/src/: lib.rs
crates/hypercore-openai/: Cargo.toml
crates/hypercore-openai/src/: lib.rs
crates/hypercore-symbolic/: Cargo.toml
crates/hypercore-symbolic/src/: lib.rs
crates/hypercore-tools/: Cargo.toml
crates/hypercore-tools/src/: lib.rs
crates/hypercore/native/: Cargo.toml
crates/hypercore/native/src/: lib.rs
crates/hypercore/python-shim/: setup.cfg
crates/hypercore/python-shim/hyper_core/: __init__.py
crates/hypercore/runner/: Cargo.toml
crates/hypercore/runner/src/: main.rs
crates/hypercore/src/: lib.rs
docs/: planning1.md  planning2.md  planning3.md
