[package]
name = "hypercore-examples-groq"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.38.0", features = ["full"] }
dotenv = "0.15"
log = "0.4"
env_logger = "0.11"
async-trait = "0.1"
hypercore = { path = "../hypercore" }
hypercore-tools = { path = "../hypercore-tools" }
hypercore-memory-sqlite = { path = "../hypercore-memory-sqlite" }
aigroq = { path = "../hypercore-groq" }

