[package]
name = "hypercore-openai"
version = "0.1.0"
edition = "2024"

[dependencies]
hypercore = { path = "../hypercore" }
async-trait = "0.1"
reqwest = { version = "0.11", features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"